2004-11-19  Jordi Mas i Hernandez <jordi@ximian.com>

	* ThemeWin32Classic.cs: initial listbox drawing code
	* DrawMode.cs: new enumerator
	* ListControl.cs: stubbed class
	* ListBox.cs: initial implementation
	* Theme.cs: new methods definitions
	* SelectionMode.cs: new enumerator

2004-11-17  Peter Bartok  <pbartok@novell.com>

	* XplatUIWin32.cs: Added double-click events to the class style
	* Control.cs (WndProc): 
	  - Added handling of click-count to MouseDown/ MouseUp events. 
	  - Added handling of middle and right mouse buttons
	  - Removed old debug code

2004-11-17  Jackson Harper  <jackson@ximian.com>

	* XplatUIX11.cs: Use the new Mono.Unix namespace.

2004-11-17  Ravindra <rkumar@novell.com>

	* ListView.cs: Added event handling for MouseMove/Up/Down.
	* ColumnHeader.cs: Added a read-only internal property 'Pressed'.
	* ThemeWin32Classic.cs: We need to clear the graphics context and
	draw column header in a proper state.


2004-11-17  Jordi Mas i Hernandez <jordi@ximian.com>

	*  Menu.cs: fixes signature

2004-11-16  Peter Bartok  <pbartok@novell.com>

	* XplatUIX11.cs (GetMessage): Implemented generation of
	  double click mouse messages

2004-11-12  Jordi Mas i Hernandez <jordi@ximian.com>

	*  Form.cs, MainMenu.cs, MenuAPI.cs: tracker should be for tracking session
	not by menu

2004-11-11  Peter Bartok  <pbartok@novell.com>

	* HandleData.cs: Added Visible property
	* XplatUIX11.cs (IsVisible): Now uses Visible property from
	  HandleData
	* XplatUIX11.cs: Removed old debug leftovers
	* XplatUIX11.cs (DefWndProc): Added WM_ERASEBKGND handler
	* Control.cs (WndProc): Removed old debug leftovers,
	  streamlined handling of WM_WINDOWPOSCHANGED, removed un-
	  needed WM_SIZE handling

2004-11-11  Jackson Harper  <jackson@ximian.com>

	* OwnerDrawPropertyBag.cs:
	* TreeViewImageIndexConverter.cs: Initial implementation

2004-11-10  Jackson Harper  <jackson@ximian.com>

	* ThemeWin32Classic.cs: